@@ -4,7 +4,12 @@ History of this buildout
 4.23 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Refuse to send an e-mail for newsletters, etcetera, when this e-mail
+  has already been sent in the last thirty minutes.  This will raise
+  an exception and show a traceback.  We also show a warning on the
+  email_out page with the date and time when this item was sent.
+  Sending a test e-mail is always possible.
+  [maurits]
 
 
 4.22 (2013-01-22)
